Added qqueue; Modified syscall_table sys_qqservice_named_op to sys_qqservice_named

--- a/module/Makefile
+++ b/module/Makefile
@@ -3,7 +3,7 @@ MAKE=make
 PWD=$(shell pwd)
 
 obj-m := qqmodule.o
-module-objs := qqmodule.o
+module-objs := qqmodule.o qqueue.o
 
 all:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
